--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.32.2
-numpy
-pandas
-scikit-learn
-joblib
+pandas==2.1.4
+numpy==1.24.3
+scikit-learn==1.3.2
 tensorflow==2.13.0
+joblib==1.3.2
